--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Be+Vietnam|Work+Sans:300,400,600&display=swap" rel="stylesheet">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <meta name="theme-color" content="#f5e65e">
     <title>marksblog</title>
   </head>
   <body>
